--- a/index.org
+++ b/index.org
@@ -1,3 +1,317 @@
+* 2017-02-27 Emacs news
+
+- [[http://irreal.org/blog/?p=5966][Irreal: Emacs 25.2 RC2]]
+- [[http://pragmaticemacs.com/emacs/some-useful-mu4e-shortcuts/][Pragmatic Emacs: Some useful mu4e shortcuts]]
+- [[http://irreal.org/blog/?p=5964][Irreal: Zamansky 30: Elfeed (2)]]
+- [[http://emacshorrors.com/posts/less-than-exceptional.html][emacshorrors: Less Than Exceptional]]
+- [[http://mbork.pl/2017-02-26_other-window-or-switch-buffer][Marcin Borkowski: other-window-or-switch-buffer]]
+- [[http://feedproxy.google.com/~r/GotEmacs/~3/9HmwmZDXGD8/emacs-252-rc2-out.html][Got Emacs?: Emacs 25.2 RC2 out]]
+- [[http://blog.binchen.org/posts/find-the-buffer-named-by-pinyin.html][Chen Bin (redguardtoo): Find the buffer with Chinese name]]
+- [[http://manuel-uberti.github.io/emacs/2017/02/26/dynamicfonts/][Manuel Uberti: Dynamically change font size in Emacs]]
+- [[https://oremacs.com/2017/02/25/warp-9-make-it-so/][(or emacs: Make it so&amp;#58 file1 -&gt; Makefile -&gt; file2]]
+- [[http://pragmaticemacs.com/emacs/tag-multiple-headlines-at-once-in-org-mode/][Pragmatic Emacs: Tag multiple headlines at once in org-mode]]
+- [[http://mp.vv.si/blog/emacs/building-a-tree-view-for-xml-data/][Matthias Pfeifer: Building a tree-view for xml data]]
+- [[http://sachachua.com/blog/2017/02/2017-02-20-emacs-news/][sachachua: 2017-02-20 Emacs news]]
+- [[https://www.reddit.com/r/emacs/comments/5wkqd6/so_its_possible_to_convert_orgword_but_what_about/][so it's possible to convert org-&gt;word, but what about the other way around?]]
+- [[https://github.com/orgzly/orgzly-android][orgzly/orgzly-android: Orgzly for Android is now opensouce]] ([[https://www.reddit.com/r/emacs/comments/5wkacq/orgzlyorgzlyandroid_orgzly_for_android_is_now/][Reddit]])
+- [[https://www.reddit.com/r/emacs/comments/5wjt5p/good_looking_tabs_mode/][Good looking tabs mode]]
+- [[https://www.reddit.com/r/emacs/comments/5wjrw5/trying_to_track_down_a_weird_error_in_fontlock/][Trying to track down a weird error in font-lock while compiling]]
+- [[https://www.reddit.com/r/emacs/comments/5wjgon/orgmode_spreadsheet_newbie_question/][Org-Mode / spreadsheet / Newbie Question]]
+- [[https://www.reddit.com/r/emacs/comments/5wj76n/orgagendarescheduletotoday/][org-agenda-reschedule-to-today]]
+- [[https://www.reddit.com/r/emacs/comments/5wieow/howto_make_somethingclose_to_evallastsexp_command/][How-to make something-close to `eval-last-sexp` command for perl scripts?]]
+- [[https://github.com/spf13/hugo/releases/tag/v0.19][Hugo v0.19 - with native Emacs Org-mode content support]] ([[https://www.reddit.com/r/emacs/comments/5wibiv/hugo_v019_with_native_emacs_orgmode_content/][Reddit]])
+- [[https://www.reddit.com/r/emacs/comments/5wfus5/is_there_a_javascript_mode_similar_to_elpy_that/][Is there a javascript mode similar to elpy* that can complete over dom functions, complete over jquery, vue, react, etc., whatever I am requiring (if that makes sense)?]]
+- [[http://mp.vv.si/blog/emacs/building-a-tree-view-for-xml-data/][Building a tree-view for xml data]] ([[https://www.reddit.com/r/emacs/comments/5wf9ci/building_a_treeview_for_xml_data/][Reddit]])
+- [[https://www.reddit.com/r/emacs/comments/5wezq1/how_can_i_change_the_ein_output_background_face/][How can I change the ein output background face?]]
+- [[https://oremacs.com/2017/02/25/warp-9-make-it-so/][Make it so: file1 -&gt; Makefile -&gt; file2]] ([[https://www.reddit.com/r/emacs/comments/5w8wsi/make_it_so_file1_makefile_file2/][Reddit]])
+- [[https://www.reddit.com/r/emacs/comments/5w7c8r/trouble_with_inserting_images_in_modified_emacs/][Trouble with inserting images in modified emacs]]
+- [[http://cestlaz.github.io/posts/using-emacs-30-elfeed-2/#.WLIMnCLVqTc.reddit][Using Emacs - 30 - elfeed part 2 - Hydras]] ([[https://www.reddit.com/r/emacs/comments/5w6xxn/using_emacs_30_elfeed_part_2_hydras/][Reddit]])
+- [[https://www.masteringemacs.org/article/fun-games-in-emacs][Fun and Games in Emacs]] ([[https://www.reddit.com/r/emacs/comments/5w6vtl/fun_and_games_in_emacs/][Reddit]])
+- [[https://www.reddit.com/r/emacs/comments/5w6a36/x_forwarding_emacs/][X Forwarding Emacs]]
+- [[https://www.reddit.com/r/emacs/comments/5w68jc/is_it_possible_for_a_function_to_insert_4_spaces/][Is it possible for a function to insert 4 spaces when called]]
+- [[https://www.reddit.com/r/emacs/comments/5w64t5/is_it_possible_to_make_a_face_immune_to_region/][Is it possible to make a face immune to region highlighting?]]
+- [[https://www.reddit.com/r/emacs/comments/5w51ia/a_minimal_c_ide_setup_for_emacs/][A minimal C++ IDE setup for Emacs?]]
+- [[https://www.reddit.com/r/emacs/comments/5w005x/orglearnel_its_a_promising_emacs_package_but/][org-learn.el it's a promising EMACS package but how-to install it? help, pls.]]
+- [[https://www.reddit.com/r/emacs/comments/5vz7ov/restclient_mode_with_socks5_proxy/][Restclient mode with socks5 proxy]]
+- [[https://www.reddit.com/r/emacs/comments/5vwzx5/caret_character_in_ivy_minibuffer/][Caret character in ivy minibuffer]]
+- [[https://reader.tymoon.eu/article/350][Portacle - Adventures in Cross-Platform Deployment]] ([[https://www.reddit.com/r/emacs/comments/5vwwlh/portacle_adventures_in_crossplatform_deployment/][Reddit]])
+- [[https://www.reddit.com/r/emacs/comments/5vwmor/how_to_get_swiperhelmswoop_like_regex_search_on/][How to get swiper/helm-swoop like regex search on the browsers?]]
+- [[https://github.com/cute-jumper/helm-ext][Some Dirty Hacks for Helm]] ([[https://www.reddit.com/r/emacs/comments/5vw7mw/some_dirty_hacks_for_helm/][Reddit]])
+- [[https://www.reddit.com/r/emacs/comments/5vu08d/error_on_startup_cldotimes_already_defined_not/][Error on startup: "cl-dotimes already defined, not rebinding"]]
+- [[https://i.redd.it/uhjewl450ohy.png][Why is my IPython shell freaking out in Emacs 25? (Clean install)]] ([[https://www.reddit.com/r/emacs/comments/5vss2s/why_is_my_ipython_shell_freaking_out_in_emacs_25/][Reddit]])
+- [[http://blog.jupyter.org/2017/02/23/the-continued-existence-of-the-emacs-ipython-notebook/][The Continued Existence of the Emacs IPython Notebook]] ([[https://www.reddit.com/r/emacs/comments/5vspi7/the_continued_existence_of_the_emacs_ipython/][Reddit]])
+- [[https://www.reddit.com/r/emacs/comments/5vrnme/uncommon_document_navigation_tips/][Uncommon document navigation tips?]]
+- [[https://www.reddit.com/r/emacs/comments/5vqmcs/org_mode_how_do_i_stop_periodically_scheduled/][[Org mode] How do I stop periodically scheduled tasks to appear "fresh" in the agenda even if they were not done in time?]]
+- [[https://github.com/jixiuf/golden-ratio-scroll-screen][golden-ratio-scroll-screen: scroll half the page and highlight line before and after scroll]] ([[https://www.reddit.com/r/emacs/comments/5vp34b/goldenratioscrollscreen_scroll_half_the_page_and/][Reddit]])
+- [[https://www.reddit.com/r/emacs/comments/5vmpi8/i_just_used_ctrlt_dont_need_that_one_very_otfen/][I just used Ctrl-t. Don't need that one very otfen.]]
+- [[http://cestlaz.github.io/posts/using-emacs-29%20elfeed/#.WK3tXXmqjls.reddit][Using Emacs - 29 -elfeed part 1]] ([[https://www.reddit.com/r/emacs/comments/5vkzah/using_emacs_29_elfeed_part_1/][Reddit]])
+- [[https://www.reddit.com/r/emacs/comments/5vkyug/what_packages_are_you_working_on/][What Packages Are You Working On?]]
+- [[https://www.reddit.com/r/emacs/comments/5vk7e7/setting_up_emacs_in_windows_81_as_well_as_using/][setting up emacs in windows 8.1 as well as using org-mode]]
+- [[https://www.reddit.com/r/emacs/comments/5vju1r/backing_upversioning_emacsd_bashrc_xmonad_etc/][Backing up/versioning : .emacs.d, .bashrc, .xmonad, etc config...]]
+- [[https://www.reddit.com/r/emacs/comments/5vgv2f/a_complete_newbie_to_the_land_of_emacs_no_i_am/][A complete newbie to the land of Emacs, no I am not a developer or anything fancy.]]
+- [[https://www.reddit.com/r/emacs/comments/5vhlws/using_tab_for_both_yasnippet_and_company/][Using tab for both yasnippet and company]]
+- [[https://www.reddit.com/r/emacs/comments/5vf2uv/learning_resource_recommendation_beyond_the_basics/][Learning Resource Recommendation: beyond the basics]]
+- [[https://www.reddit.com/r/emacs/comments/5veq76/ricing_emacs/]["ricing" emacs?]]
+- [[https://www.reddit.com/r/emacs/comments/5vdo7r/clean_way_to_unbind_cx_d_to_helmdired_using/][Clean way to unbind C-x d to helm-dired using use-package]]
+- [[https://github.com/abe33/atom-pigments][Emacs alternative for Atom's pigments plugin?]] ([[https://www.reddit.com/r/emacs/comments/5vd77x/emacs_alternative_for_atoms_pigments_plugin/][Reddit]])
+- [[https://tsshriram.com/2017/02/21/emacs-to-the-space/][Emacs to the Space!]] ([[https://www.reddit.com/r/emacs/comments/5vbs7e/emacs_to_the_space/][Reddit]])
+- [[https://www.reddit.com/r/emacs/comments/5vbx5y/integrating_emacs_into_other_applications/][Integrating Emacs into other applications]]
+- [[https://www.reddit.com/r/emacs/comments/5vbb2n/why_use_recentf_when_you_can_just_reverse_isearch/][Why use recentf when you can just reverse isearch find-file history?]]
+- [[https://discuss.gohugo.io/t/org-mode-content-support-merged-into-hugo-master/5530][Org-mode content support merged into Hugo master]] ([[https://www.reddit.com/r/emacs/comments/5vb5ge/orgmode_content_support_merged_into_hugo_master/][Reddit]])
+- [[https://www.reddit.com/r/emacs/comments/5vaj8c/emacs_client_splash_image/][Emacs client splash image]]
+- [[https://www.reddit.com/r/emacs/comments/5vahvh/how_to_properly_save_sensitive_information_in/][How to properly save sensitive information in emacs configs?]]
+- [[https://www.reddit.com/r/emacs/comments/5v9o1q/been_using_emacs_for_almost_a_month_now/][Been using emacs for almost a month now]]
+- [[https://www.reddit.com/r/emacs/comments/5v8uk4/is_xsh_making_unix_more_like_an_emacs/][Is Xsh making Unix more like an Emacs?]]
+
+
+- [[https://www.reddit.com/r/spacemacs/comments/5wf24a/preserving_helmminibuffer_results/][Preserving helm.mini-buffer results]]
+- [[https://www.reddit.com/r/spacemacs/comments/5wa64q/could_not_find_module_graphicsgloss/][Could not find module ‘Graphics.Gloss’]]
+- [[https://www.reddit.com/r/spacemacs/comments/5wa2i0/some_introlevel_spacemacs_videos/][Some intro-level Spacemacs videos]]
+- [[https://www.reddit.com/r/spacemacs/comments/5w5d2s/vimstyle_tabs/][Vim-style tabs]]
+- [[https://i.redd.it/185yv07syuhy.png][If your muscle memory can't help but type Spacemacs mnemonics in Vim.. Even for the simplest things like saving the file (`SPC-f-s`), or bringing up the config file (`SPC-f-e-d`) for further customization your favorite (ex) editor.]] ([[https://www.reddit.com/r/spacemacs/comments/5vzlbc/if_your_muscle_memory_cant_help_but_type/][Reddit]])
+- [[https://www.reddit.com/r/spacemacs/comments/5vz00t/custom_keybindings_for_layer/][Custom keybindings for layer]]
+- [[https://www.reddit.com/r/spacemacs/comments/5vu7pp/why_does_setting_tabwidth_also_effect/][Why does setting `tab-width` also effect `indent-tabs-mode?]]
+- [[https://www.reddit.com/r/spacemacs/comments/5vjyh8/cannot_get_inferior_python_shell_to_run_in_360/][Cannot get Inferior Python shell to run in 3.6.0]]
+- [[https://www.reddit.com/r/spacemacs/comments/5vj1nh/keybindings_after_colon/][Keybindings after colon?]]
+
+- New packages:
+- [[package:build-status][build-status]]: Mode line build status indicator
+- [[package:cl-print][cl-print]]: CL-style generic printer facilies
+- [[package:ede-php-autoload-composer-installers][ede-php-autoload-composer-installers]]: Composer installers support for ede-php-autoload
+- [[package:ede-php-autoload-drupal][ede-php-autoload-drupal]]: Drupal support for ede-php-autoload
+- [[package:flycheck-clang-tidy][flycheck-clang-tidy]]: Flycheck syntax checker using clang-tidy
+- [[package:kaolin-theme][kaolin-theme]]: A dark jade theme inspired by Sierra.vim
+- [[package:ob-async][ob-async]]: Asynchronous org-babel src block execution
+- [[package:ob-sql-mode][ob-sql-mode]]: SQL code blocks evaluated by sql-mode
+- [[package:picpocket][picpocket]]: Image viewer
+- [[package:prassee-theme][prassee-theme]]: A high contrast color theme
+- [[package:vue-html-mode][vue-html-mode]]: Major mode for editing Vue.js templates
+
+* 2017-02-20 Emacs news
+  :PROPERTIES:
+  :ID:       o2b:41eefaff-c5a1-4881-a25c-af3e717867bc
+  :POST_DATE: [2017-02-20 Mon 22:11]
+  :POSTID:   28923
+  :BLOG:     sacha
+  :END:
+
+- Emacs Lisp:
+  - [[http://mbork.pl/2017-02-18_Using_isearch-string_on_exit_from_isearch][Using isearch-string on exit from isearch]] - fiddling with last-command
+  - [[http://nullprogram.com/blog/2017/02/14/][Asynchronous Requests from Emacs Dynamic Modules]]
+  - [[https://ericabrahamsen.net/tech/2016/feb/bbdb-eieio-object-oriented-elisp.html][BBDB on EIEIO – An Introduction to Object-Oriented Emacs Lisp]] ([[https://www.reddit.com/r/emacs/comments/5u7rsu/bbdb_on_eieio_an_introduction_to_objectoriented/][Reddit]])
+- Emacs development:
+  - [[https://lists.gnu.org/archive/html/emacs-devel/2017-02/msg00106.html][emacs-announce: Emacs 25.2 RC1]]
+  - [[https://lists.gnu.org/archive/html/emacs-devel/2017-02/msg00577.html][use-package.el about to be moved to Emacs core]] ([[https://www.reddit.com/r/emacs/comments/5udtw1/usepackageel_about_to_be_moved_to_emacs_core/][Reddit]])
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=e463e5762bbe628be3d15da066a90f079a8468b3][Support 24-bit direct colors on text terminals]]
+  - [[http://lists.gnu.org/archive/html/emacs-devel/2017-02/msg00678.html][Discussion of possible way to ship native modules - GSS support for Gnus]]
+  - [[http://lists.gnu.org/archive/html/emacs-devel/2017-02/msg00601.html][Continued discussion of overlays as AA-tree]]
+  - [[http://lists.gnu.org/archive/html/emacs-devel/2017-02/msg00583.html][Gathering input for enwc - Emacs network client]]
+- Navigation:
+  - [[http://xkeymacs.osdn.jp/][xkeymacs: use emacs keybindings everywhere on Windows]] ([[https://www.reddit.com/r/emacs/comments/5ui37j/xkeymacs_use_emacs_keybindings_everywhere_on/][Reddit]])
+  - [[https://www.reddit.com/r/emacs/comments/5txzfd/is_it_just_me_or_is_counselivy_way_way_better/][Helm vs Counsel/Ivy]]
+- Appearance:
+  - [[https://ekaschalk.github.io/post/prettify-mode/][Mathematical Notation in Emacs]] ([[https://www.reddit.com/r/emacs/comments/5v2uvu/mathematical_notation_in_emacs/][Reddit]])
+  - [[https://www.reddit.com/r/emacs/comments/5ujvfk/my_first_emacs_dark_theme/][My first Emacs dark theme]]
+  - [[https://www.reddit.com/r/emacs/comments/5tzub2/improving_shellscriptmode_highlight/][improving shell-script-mode highlight]]
+  - [[https://www.reddit.com/r/emacs/comments/5umjnv/color_function_calls_in_code/][Color function calls in code]]
+- Org Mode:
+  - [[http://mbork.pl/2017-02-13_Sorting_Org_entries_by_most_recent_activity][Sorting Org entries by most recent activity]]
+  - [[https://www.reddit.com/r/emacs/comments/5triiq/blogging_with_hugo_markdown_using_orgmode/][Blogging with Hugo (markdown) using org-mode, ox-pandoc, and yasnippet]]
+  - [[https://www.reddit.com/r/orgmode/comments/5u8z2e/obasync_asynchronous_srcblock_execution_for/][ob-async: Asynchronous src-block execution for org-babel]]
+  - [[https://www.reddit.com/r/emacs/comments/5tv8c9/orgmode_how_to_create_link_to_a_target_with/][Org-Mode: how to create link to a target with completion?]] - added to org-ref
+  - [[https://www.reddit.com/r/emacs/comments/5umuh6/i_want_to_sync_org_mode_with_all_the_things/][Sync Org with Asana]]
+  - [[http://fgiasson.com/blog/index.php/2016/06/21/optimal-emacs-settings-for-org-mode-for-literate-programming/][Optimal Emacs Settings for Org-mode for Literate Programming]] (2016, [[https://news.ycombinator.com/item?id=13675001][HN]])
+- Other:
+  - [[http://irreal.org/blog/?p=5935][Paperless]]
+  - [[http://pragmaticemacs.com/emacs/batch-edit-file-permissions-in-dired/][Batch-edit file permissions in dired]]
+  - [[https://www.reddit.com/r/emacs/comments/5ux1aq/just_discovered_emacs_as_a_windows_user_and_i/][Just discovered emacs as a Windows user and I LOVE IT]] - tips in the comments
+  - [[https://shinmera.github.io/portacle/][Portable and multiplatform Emacs25 (without xwidgets. Comes from Portacle, a Common Lisp development environment)]] ([[https://www.reddit.com/r/emacs/comments/5tssbe/portable_and_multiplatform_emacs25_without/][Reddit]])
+- New packages:
+  - [[package:cov][cov]]: Show coverage stats in the fringe.
+  - [[package:dokuwiki][dokuwiki]]: Edit Remote DokuWiki Pages Using XML-RPC
+  - [[package:eslintd-fix][eslintd-fix]]: use eslint_d to automatically fix js files
+  - [[package:flycheck-checkpatch][flycheck-checkpatch]]: Flycheck support for checkpatch.pl tool
+  - [[package:futhark-mode][futhark-mode]]: major mode for editing Futhark source files
+  - [[package:highlight-refontification][highlight-refontification]]: Visualize font-lock refontification.
+  - [[package:messages-are-flowing][messages-are-flowing]]: visible indication when composing "flowed" emails
+  - [[package:nocomments-mode][nocomments-mode]]: Minor mode that makes comments invisible.
+  - [[package:nv-delete-back][nv-delete-back]]: backward delete like modern text editors
+  - [[package:org-table-sticky-header][org-table-sticky-header]]: Sticky header for org-mode tables
+
+Links from [[http://reddit.com/r/emacs/new][reddit.com/r/emacs]], [[http://reddit.com/r/orgmode][/r/orgmode]], [[http://reddit.com/r/spacemacs][/r/spacemacs]], [[https://hn.algolia.com/?query=emacs&sort=byDate&prefix&page=0&dateRange=all&type=story][Hacker News]], [[http://planet.emacsen.org][planet.emacsen.org]], [[https://www.youtube.com/results?search_query=emacs&search_sort=video_date_uploaded][Youtube]], the changes to the [[http://git.savannah.gnu.org/cgit/emacs.git/log/etc/NEWS][Emacs NEWS file]], and [[http://lists.gnu.org/archive/html/emacs-devel/2017-02/][emacs-devel]].
+
+[[http://sachachua.com/blog/category/emacs-news][Past Emacs News round-ups]]
+
+* 2017-01-13 Emacs News
+  :PROPERTIES:
+  :ID:       o2b:b1e74277-71ea-4522-a6de-92d118bb0844
+  :POST_DATE: [2017-02-15 Wed 02:21]
+  :POSTID:   28916
+  :BLOG:     sacha
+  :END:
+
+- Emacs Lisp:
+  - [[http://irreal.org/blog/?p=5929][Resetting a defvar Value]]
+  - [[http://emacshorrors.com/posts/strange-code.html][Strange Code]] - dealing with faces before :inherit
+  - [[https://www.reddit.com/r/emacs/comments/5tqtog/what_are_the_pros_and_cons_of_emacs_everything_is/][Pros and cons of Emacs' everything is a buffer approach]]
+  - [[https://github.com/magnars/dash.el/pull/210][Teaching the elisp byte-compiler how to optimise dash.el functions]] ([[https://www.reddit.com/r/emacs/comments/5sp8xt/teaching_the_elisp_bytecompiler_how_to_optimise/][Reddit]])
+  - [[https://www.reddit.com/r/spacemacs/comments/5t2mak/a_moderately_experienced_emacs_user_tries/][A moderately experienced Emacs user tries Spacemacs]]
+  - [[https://ericabrahamsen.net/tech/2016/feb/bbdb-eieio-object-oriented-elisp.html][BBDB on EIEIO – An Introduction to Object-Oriented Emacs Lisp]]
+- Emacs development:
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=31b4d9a13741caae2422636d4944212e702b19c3][query-replace-from-to-separator and query-replace-read-from]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=c939075b81b2b06c5ec040d7039fd20433509273][New library xdg]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=14dd9101ec4838f75addf25bf6b06ef33f8a7e97][Signal list cycles]]
+  - [[http://lists.gnu.org/archive/html/emacs-devel/2017-02/msg00535.html][Proposed reimplementation of mark-defun]]
+  - [[http://lists.gnu.org/archive/html/emacs-devel/2017-02/msg00422.html][Long discussion of comment-cache branch]]
+  - [[http://lists.gnu.org/archive/html/emacs-devel/2017-02/msg00361.html][Continued work on HTML, CSS, and JS modes]]
+- Coding:
+  - [[https://tuhdo.github.io/c-ide.html][C/C++ Development Environment for Emacs]]
+  - [[https://www.reddit.com/r/emacs/comments/5slhkb/what_is_your_preferred_setup_for_python/][What is your preferred setup for Python?]]
+  - [[https://www.reddit.com/r/emacs/comments/5t6rnt/recommended_configpackages_for_golang/][Recommended config/packages for golang]]
+  - [[http://jr0cket.co.uk/2017/02/spacemacs-using-magit-with-github.html][Spacemacs - Using Magit With Github]]
+  - [[https://github.com/vermiculus/magithub/releases/tag/0.1.1][Magithub 0.1.1 released -- a minor revision with major updates]]
+  - [[https://www.reddit.com/r/emacs/comments/5t6ddv/jdecomp_decompile_java_classfiles/][JDecomp: decompile Java classfiles]]
+  - [[https://github.com/xquery-mode/Oook-selector][xquery-mode/Oook-selector: Convenience tools for interacting with XQuery and MarkLogic]]
+  - [[https://i.redd.it/xylcwkjtmgey.png][Forgotten gem: JDIbug is a graphical Java debugger for Emacs with cond break, watches, locals list supporting compl obj]] ([[https://www.reddit.com/r/emacs/comments/5smadl/forgotten_gem_jdibug_is_a_graphical_java_debugger/][Reddit]])
+  - [[https://www.bennee.com/~alex/blog/2017/02/09/checkpatch-mode/][checkpatch-mode]]
+  - [[https://utcc.utoronto.ca/~cks/space/blog/programming/CodeEditingVimVsEmacs][My pragmatic decision on GNU Emacs versus vim for my programming]] (2016, [[https://news.ycombinator.com/item?id=13590944][HN]])
+- Org Mode:
+  - [[https://www.reddit.com/r/emacs/comments/5tqn61/orgrefiletargets_based_on_current_org_file/][org-refile-targets based on current org file]]
+  - [[https://www.reddit.com/r/emacs/comments/5tmwkl/org_based_schedule_mode/][org based schedule mode]]
+  - [[https://github.com/orgzly/orgzly-android][Orgzly is open source now!]] ([[https://www.reddit.com/r/emacs/comments/5tgngz/orgzly_is_open_source_now/][Reddit]])
+  - [[https://www.reddit.com/r/orgmode/comments/5tl76p/evernote_to_org_mode_migration/][Evernote to Org mode migration]]
+  - [[https://www.reddit.com/r/orgmode/comments/5shz5o/orgref_introduction/][org-ref introduction]]
+- Other:
+  - [[http://pragmaticemacs.com/emacs/batch-edit-file-permissions-in-dired/][Batch-edit file permissions in dired]]
+  - [[http://emacspeak.blogspot.com/2017/02/audio-deja-vu-audio-formatted-math-on.html][Audio Deja Vu: Audio Formatted Math On The Emacspeak Desktop]]
+  - [[https://github.com/Bad-ptr/common-header-mode-line.el][Per frame mode/header-line (patches welcome:))]] ([[https://www.reddit.com/r/emacs/comments/5tm0hw/per_frame_modeheaderline_patches_welcome/][Reddit]])
+  - [[https://www.reddit.com/r/emacs/comments/5tg0cw/best_way_to_manage_lots_of_email_in_the_gnus/][Best way to manage lots of email in the gnus summary buffer?]]
+  - [[http://unconj.ca/blog/using-hledger-with-ledger-mode.html][Using hledger with ledger-mode]] 
+  - [[https://www.reddit.com/r/emacs/comments/5t884r/xah_fly_keys_now_supports_qwerty_layout/][Xah Fly Keys, now supports QWERTY layout]]
+  - [[https://github.com/atgreen/paperless][paperless - an emacs assisted PDF document filing tool]] ([[https://www.reddit.com/r/emacs/comments/5t4r2n/paperless_an_emacs_assisted_pdf_document_filing/][Reddit]])
+  - [[http://cestlaz.github.io/posts/using-emacs-27-rectangles/#.WJ0E170m-B8.reddit][Using Emacs - 28 -Rectangles]] ([[https://www.reddit.com/r/emacs/comments/5t3yea/using_emacs_28_rectangles/][Reddit]])
+  - [[https://vxlabs.com/2017/02/07/mu4e-0-9-18-e-mailing-with-emacs-now-even-better/][mu4e 0.9.18: E-Mailing with Emacs now even better.]] ([[https://www.reddit.com/r/emacs/comments/5srva7/mu4e_0918_emailing_with_emacs_now_even_better/][Reddit]])
+  - [[https://gist.github.com/xorian/be19359b644a33f9947480bc8e7c7be0][Script to send standard input into the emacs kill ring or a register]] ([[https://www.reddit.com/r/emacs/comments/5sn67f/script_to_send_standard_input_into_the_emacs_kill/][Reddit]])
+  - [[https://www.youtube.com/watch?v=7-EFI65kmDA][GNU Emacs #6: Shell]] (Spanish, 11:37)
+  - [[https://www.youtube.com/watch?v=xZpPtbInS4o][Emacs Lisp: copy-to-buffer]] (French, 8:38), [[https://www.youtube.com/watch?v=RVRupRuPC5Q][Emacs Lisp]] (8:01)
+  - [[https://www.youtube.com/watch?v=Vswn9Wu-eA0][Installing Emacs and Spacemacs Setup from Scratch MacOS]] (4:59)
+- New packages:
+  - [[package:anything-tramp][anything-tramp]]: Tramp with anything interface
+  - [[package:async-await][async-await]]: Async/Await
+  - [[package:font-lock-profiler][font-lock-profiler]]: Coverage and timing tool for font-lock keywords.
+  - [[package:goose-theme][goose-theme]]: A gray color theme
+  - [[package:green-screen-theme][green-screen-theme]]: A nice color theme for those who miss green CRTs
+  - [[package:guess-language][guess-language]]: Robust automatic language detection
+  - [[package:helm-perspeen][helm-perspeen]]: helm extension for perspeen.el
+  - [[package:helm-tramp][helm-tramp]]: Tramp with helm interface
+  - [[package:jdecomp][jdecomp]]: Interface to Java decompilers
+  - [[package:madhat2r-theme][madhat2r-theme]]: dark color theme that is easy on the eyes
+  - [[package:markdown-edit-indirect][markdown-edit-indirect]]: Edit markdown code block in a separate buffer
+  - [[package:paperless][paperless]]: A major mode for sorting and filing PDF documents.
+  - [[package:pastery][pastery]]: paste snippets to pastery.net.
+  - [[package:phan][phan]]: Utility functions for Phan (PHP static analizer)
+  - [[package:zpresent][zpresent]]: Simple presentation mode based on org files.
+
+Links from [[http://reddit.com/r/emacs/new][reddit.com/r/emacs]], [[http://reddit.com/r/orgmode][/r/orgmode]], [[http://reddit.com/r/spacemacs][/r/spacemacs]], [[https://hn.algolia.com/?query=emacs&sort=byDate&prefix&page=0&dateRange=all&type=story][Hacker News]], [[http://planet.emacsen.org][planet.emacsen.org]], [[https://www.youtube.com/results?search_query=emacs&search_sort=video_date_uploaded][Youtube]], the changes to the [[http://git.savannah.gnu.org/cgit/emacs.git/log/etc/NEWS][Emacs NEWS file]], and [[http://lists.gnu.org/archive/html/emacs-devel/2017-02/][emacs-devel]].
+
+[[http://sachachua.com/blog/category/emacs-news][Past Emacs News round-ups]]
+
+* 2017-02-06 Emacs News
+  :PROPERTIES:
+  :ID:       o2b:5aae07fb-55b3-4855-8a37-89c3e6456177
+  :POST_DATE: [2017-02-07 Tue 00:49]
+  :POSTID:   28910
+  :BLOG:     sacha
+  :END:
+
+- Emacs Lisp:
+  - [[http://mbork.pl/2017-02-05_Opening_parenthesis_at_the_line_beginning][Opening parenthesis at the line beginning]]
+  - [[http://nullprogram.com/blog/2017/01/30/][How to Write Fast(er) Emacs Lisp]] ([[https://www.reddit.com/r/emacs/comments/5r8qqr/how_to_write_faster_emacs_lisp/][Reddit]])
+  - [[http://mbork.pl/2017-01-30_Current_Emacs_version][Current Emacs version]]
+  - [[https://github.com/chuntaro/emacs-async-await][Async/Await for Emacs]] 
+  - [[http://www.holgerschurig.de/en/emacs-tayloring-the-built-in-mode-line/][Tailoring the built-in Emacs Mode line]]
+  - [[https://www.youtube.com/watch?v=m_Oj_6Bjryw][Emacs Lisp (13:30)]] - French
+- Emacs development:
+  - [[https://github.com/vkazanov/elfuse][FUSE filesystems in Emacs Lisp]] ([[https://www.reddit.com/r/emacs/comments/5r73jo/fuse_filesystems_in_emacs_lisp/][Reddit]])
+  - [[http://lists.gnu.org/archive/html/emacs-devel/2017-02/msg00161.html][Discussion on using CEDET modules from Emacs]]
+- Coding:
+  - [[https://www.reddit.com/r/emacs/comments/5roq5l/cbox_comment_block_editing_for_c_like_languages/][cbox -- Comment block editing for C like languages]]
+- Org Mode:
+  - [[https://www.reddit.com/r/emacs/comments/5rwe1h/copy_snippet_in_orgmode_template_block_to_system/][Copy snippet in org-mode template block to system clipboard]]
+  - [[https://www.reddit.com/r/emacs/comments/5rsxua/how_to_do_structured_search_on_thousands_of/][How to do structured search on thousands of org-syntax files?]]
+  - [[https://i.reddituploads.com/fb2427f6289a4f58b22d2192f37d37d6?fit=max&amp;h=1536&amp;w=1536&amp;s=0ac256a4f8597c826507b54d0bab4425][MobileOrg for iOS has just been updated!]] ([[https://www.reddit.com/r/emacs/comments/5r9ynj/mobileorg_for_ios_has_just_been_updated/][Reddit]])
+  - [[https://www.reddit.com/r/orgmode/comments/5rivn7/how_get_started_with_orgmode_for_write_scientific/][how get started with orgmode for write scientific papers?]]
+- Input devices:
+  - [[http://www.blogbyben.com/2017/01/adventures-in-hardware-hacking-adding.html][Adventures in hardware hacking: adding foot pedal support to emacs]]
+  - [[https://www.reddit.com/r/emacs/comments/5s306p/keyboard_recommendation/][Keyboard recommendation?]]
+  - [[https://thisissavo.github.io/programming/music/2017/02/03/an-unexpected-toolbox-for-a-beginner-programmer.html][An Unexpected Toolbox for a Beginner Programmer: Emacs-Colemak-SandS and why do I use this combination]] ([[https://www.reddit.com/r/emacs/comments/5rw8zy/an_unexpected_toolbox_for_a_beginner_programmer/][Reddit]])
+- Other:
+  - [[http://manuel-uberti.github.io/emacs/2017/02/04/guess-language/][Automatic language detection for Flyspell]] - guess-language
+  - [[http://pragmaticemacs.com/emacs/customise-the-reply-quote-string-in-mu4e/][Customise the reply quote string in mu4e]]
+  - [[https://github.com/therockmandolinist/emacs-hacker-typer][My first package: emacs-hacker-typer]] ([[https://www.reddit.com/r/emacs/comments/5sa084/my_first_package_emacshackertyper/][Reddit]])
+  - [[https://www.reddit.com/r/emacs/comments/5rnpsm/nice_hydra_to_set_frame_transparency/][Nice hydra to set frame transparency]]
+  - [[http://www.gkayaalp.com/emacs-argument.html][An argument for Emacs]]
+  - [[https://news.ycombinator.com/item?id=13566147][Show HN: Personal finance with 'hledger' in Emacs]]
+- Other projects:
+  - [[http://wilfred.me.uk/blog/2017/02/05/these-weeks-in-remacs/][These Weeks in Remacs]]
+
+Links from [[http://reddit.com/r/emacs/new][reddit.com/r/emacs]], [[http://reddit.com/r/orgmode][/r/orgmode]], [[http://reddit.com/r/spacemacs][/r/spacemacs]], [[https://hn.algolia.com/?query=emacs&sort=byDate&prefix&page=0&dateRange=all&type=story][Hacker News]], [[http://planet.emacsen.org][planet.emacsen.org]], [[https://www.youtube.com/results?search_query=emacs&search_sort=video_date_uploaded][Youtube]], the changes to the [[http://git.savannah.gnu.org/cgit/emacs.git/log/etc/NEWS][Emacs NEWS file]], and [[http://lists.gnu.org/archive/html/emacs-devel/2017-02/][emacs-devel]].
+
+[[http://sachachua.com/blog/category/emacs-news][Past Emacs News round-ups]]
+
+
+* 2017-01-30 Emacs News
+  :PROPERTIES:
+  :ID:       o2b:85959f39-8faf-4b52-b89e-c1c33c636828
+  :POST_DATE: [2017-01-30 Mon 23:13]
+  :POSTID:   28905
+  :BLOG:     sacha
+  :END:
+
+I shuffled the sections around a bit to emphasize Emacs Lisp and Emacs
+development, based on John Wiegley's suggestion. Enjoy!
+
+- Beginner:
+  - [[https://www.reddit.com/r/emacs/comments/5qh0qp/resources_to_learn_better_emacs_editingmovement/][Resources to learn better Emacs editing/movement]]
+  - [[http://cestlaz.github.io/posts/using-emacs-27-shell/#.WItKSIUiChw.reddit][Using Emacs - 27 - shell and eshell]] ([[https://www.reddit.com/r/emacs/comments/5qh2sd/using_emacs_27_shell_and_eshell/][Reddit]])
+- Emacs Lisp:
+  - [[https://www.reddit.com/r/emacs/comments/5q4hsa/scan_text_in_shell_mode/][Scan text in shell mode]]
+- Emacs development:
+  - [[http://lists.gnu.org/archive/html/emacs-devel/2017-01/msg00700.html][Discussion of syncing Org in Emacs master, and plans for ELPA in Emacs 26]]
+  - [[http://lists.gnu.org/archive/html/emacs-devel/2017-01/msg00664.html][Discussion of defaults for -predicate and -function variables]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=110cd0b439101a15f0fbc9fb86bf22b77f8ec260][New Gnus command for sorting by read marks - C-c C-s C-m C-m]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=ff9ccf6883113ef6d30a352f3ee6dfaa090f0e88][Gnus .newsrc will now be saved only for NNTP select methods]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=43eba4955350b787c5567a31e2980ae70b9fb52f][car and cdr compositions cXXXr and cXXXXr now part of Emacs Lisp]] (ex: caddr)
+- Org Mode:
+  - [[https://www.reddit.com/r/emacs/comments/5q91p8/tools_for_making_good_documentation_orgmode_or/][Tools for making good documentation? Org-mode or some other tools?]]
+  - [[http://stackoverflow.com/a/27043756/214686][How to archive all DONE tasks under the current sub-tree]] 
+  - [[https://www.reddit.com/r/emacs/comments/5qd8co/best_method_for_orgmode_google_calendar/][Best method for orgmode Google calendar integration?]]
+  - [[https://www.reddit.com/r/emacs/comments/5qdzst/recommendations_for_professional_quality_styling/][Recommendations for professional quality styling of exported org documents ( PDF, ODT )]]
+  - [[http://kitchingroup.cheme.cmu.edu/blog/2017/01/29/ob-ipython-and-inline-figures-in-org-mode/][ob-ipython and inline figures in org-mode]]
+- Evil:
+  - [[http://www.cachestocaches.com/2016/12/vim-within-emacs-anecdotal-guide/][Vim Within Emacs: An Anecdotal Guide (Evil without Spacemacs)]] ([[https://www.reddit.com/r/emacs/comments/5qm6s4/vim_within_emacs_an_anecdotal_guide_evil_without/][Reddit]])
+  - [[https://lists.ourproject.org/pipermail/implementations-list/2017-January/002250.html][Evil got a new home]] ([[https://www.reddit.com/r/emacs/comments/5pxahe/ann_evil_got_a_new_home/][Reddit]])
+- New packages:
+  - [[package:eziam-theme][eziam-theme]]: A mostly monochrome color theme, inspired by Tao and Leuven.  Comes with dark and light background.
+  - [[package:flycheck-dialyxir][flycheck-dialyxir]]: flycheck checker for elixir dialyxir
+  - [[package:flycheck-dogma][flycheck-dogma]]: flycheck checker for elixir dogma
+  - [[package:fn][fn]]: Concise anonymous functions for Emacs Lisp
+  - [[package:frames-only-mode][frames-only-mode]]: Use frames instead of Emacs windows
+  - [[package:fuff][fuff]]: Find files with findutils.
+  - [[package:hacker-typer][hacker-typer]]: Pretend to write code like a pro
+  - [[package:inline-docs][inline-docs]]: Show inline contextual docs.
+  - [[package:major-mode-icons][major-mode-icons]]: display icon for major-mode on mode-line.
+  - [[package:mmm-jinja2][mmm-jinja2]]: MMM submode class for Jinja2 Templates
+  - [[package:org-parser][org-parser]]: parse org files into structured datatypes.
+  - [[package:psgml][psgml]]: SGML-editing mode with parsing support
+  - [[package:salt-mode][salt-mode]]: Major mode for Salt States
+  - [[package:socyl][socyl]]: Frontend for several search tools
+  - [[package:test-c][test-c]]: quickly test c code
+
+Links from [[http://reddit.com/r/emacs/new][reddit.com/r/emacs]], [[http://reddit.com/r/orgmode][/r/orgmode]], [[http://reddit.com/r/spacemacs][/r/spacemacs]], [[https://hn.algolia.com/?query=emacs&sort=byDate&prefix&page=0&dateRange=all&type=story][Hacker News]], [[http://planet.emacsen.org][planet.emacsen.org]], [[https://www.youtube.com/results?search_query=emacs&search_sort=video_date_uploaded][Youtube]], the changes to the [[http://git.savannah.gnu.org/cgit/emacs.git/log/etc/NEWS][Emacs NEWS file]], and [[http://lists.gnu.org/archive/html/emacs-devel/2017-01][emacs-devel]].
+
+[[http://sachachua.com/blog/category/emacs-news][Past Emacs News round-ups]]
+
 * 2017-01-23 Emacs News
   :PROPERTIES:
   :ID:       o2b:6710839b-f4ee-49dc-b34f-fd2c2b247ec7
